feat: 新增邮箱和广告管理接口
